hphp/hack/test/typecheck/global_const10.php
<?hh // partial

const X = foo();
